--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <script src="babylon.custom-3.1.js"></script>
     <script src="renderer.js"></script>
     <script src="hingine.js"></script>
+    <script src="realms.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
