--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <body>
     <canvas id="container"></div>
+    <script src="https://cdn.jsdelivr.net/npm/webmidi"></script>
     <script src="babylon.custom-3.1.js"></script>
     <script src="renderer.js"></script>
     <script src="hingine.js"></script>
